--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+	<script src="epreuve.js"></script>
+	<script src="config.js"></script>
 	<script src="app.js"></script>
 </head>
 <body>
@@ -30,7 +32,9 @@
 	<div data-role="ui-content">
 		<div class="ui-grid-b">
 			<div class="ui-block-a">
-				<div class="ui-bar ui-bar-a" style="height:60px"><a href="#algo">Introduction</a></div>
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Introduction</a>
+				</div>
 			</div>
 			<div class="ui-block-b">
 				<div class="ui-bar ui-bar-a" style="height:60px">
@@ -38,7 +42,9 @@
 				</div>
 			</div>
 			<div class="ui-block-c">
-				<div class="ui-bar ui-bar-a" style="height:60px"><a href="#algo">Recursion</a></div>
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Recursion</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -118,12 +124,13 @@
 	<div data-role="header">
 		<h1>Parcours</h1>
 		<a data-rel="back" data-direction="reverse" href="#" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
+		<a href="#animation" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-video">Jouer</a>
 	</div>
 
 	<div data-role="ui-content">
 		<h2 class="center">Avancement</h2>
 		<div class="ui-field-contain">
-		<label for="select-native-5">Operations</label>
+			<label for="select-native-5">Operations</label>
 			<select name="select-native-5" id="select-native-5" data-mini="true">
 				<option value="small">One</option>
 				<option value="medium">Two</option>
@@ -134,27 +141,54 @@
 			<textarea class="fixed-text" rows="7"></textarea>
 		</div>
 		<div class="steps">
-			<ul data-role="listview" data-inset="true">
-				<li data-icon="delete"><a href="#">avance 3 cases</a></li>
-				<li data-icon="delete"><a href="#">tourne 90 degres</a></li>
-				<li data-icon="delete"><a href="#">avance 2 cases</a></li>
-				<li data-icon="delete"><a href="#">tourne 90 degres</a></li>
-				<li data-icon="delete"><a href="#">avance 3 cases</a></li>
-			</ul>
+			<ol data-role="listview" data-split-icon="delete" data-split-theme="a" data-inset="true">
+				<li>
+					<a href="#">avance 3 cases</a>
+					<a href="#"></a>
+				</li>
+				<li>
+					<a href="#">tourne 90 degres</a>
+					<a href="#"></a>
+				</li>
+				<li>
+					<a href="#">avance 2 cases</a>
+					<a href="#"></a>
+				</li>
+				<li>
+					<a href="#">tourne 90 degres</a>
+					<a href="#"></a>
+				</li>
+				<li>
+					<a href="#">avance 3 cases</a>
+					<a href="#"></a>
+				</li>
+			</ol>
 		</div>
 	</div>
 	<div data-role="footer">
-	<div class="ui-grid-b">
-		<div class="ui-block-a">
-			<a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-arrow-l">Precedent</a>
-		</div>
-		<div class="ui-block-b">
-			<p class="center">Epreuves</p>
-		</div>
-		<div class="ui-block-c">
-			<a href="#options" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-arrow-r">Suivant</a>
+		<div class="ui-grid-b">
+			<div class="ui-block-a">
+				<a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-arrow-l">Precedent</a>
+			</div>
+			<div class="ui-block-b">
+				<p class="center">Epreuves</p>
+			</div>
+			<div class="ui-block-c">
+				<a href="#options" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-arrow-r">Suivant</a>
+			</div>
 		</div>
 	</div>
+</div>
+
+<!-- ANIMATION PAGE -->
+<div data-role="page" id="animation">
+	<div data-role="header">
+		<h1>Animation</h1>
+		<a data-rel="back" data-direction="reverse" href="#" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
+	</div>
+
+	<div data-role="ui-content">
+		
 	</div>
 </div>
 </body>
