--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-	<script src="epreuve.js"></script>
 	<script src="config.js"></script>
+	<script src="epreuve.js"></script>
 	<script src="app.js"></script>
 </head>
 <body>
@@ -38,14 +38,51 @@
 			</div>
 			<div class="ui-block-b">
 				<div class="ui-bar ui-bar-a" style="height:60px">
-					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Avancement</a>
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Bouger</a>
 				</div>
 			</div>
 			<div class="ui-block-c">
 				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Boucle</a>
+				</div>
+			</div>
+		</div>
+		<div class="ui-grid-b">
+			<div class="ui-block-a">
+				<div class="ui-bar ui-bar-a" style="height:60px">
 					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Recursion</a>
 				</div>
 			</div>
+			<div class="ui-block-b">
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Bouger 2</a>
+				</div>
+			</div>
+			<div class="ui-block-c">
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Boucle 2</a>
+				</div>
+			</div>
+		</div>
+		<div class="ui-grid-b">
+			<div class="ui-block-a">
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Recursion 2</a>
+				</div>
+			</div>
+			<div class="ui-block-b">
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Bouger 3</a>
+				</div>
+			</div>
+			<div class="ui-block-c">
+				<div class="ui-bar ui-bar-a" style="height:60px">
+					<a href="#algoPop" data-rel="popup" data-position-to="window" data-transition="pop">Boucle 3</a>
+				</div>
+			</div>
+		</div>
+		<div class="ui-grid-b">
+			<button width="50px" class="" disabled>...</button>
 		</div>
 	</div>
 	<!--
@@ -56,11 +93,11 @@
 
 	<div data-role="popup" id="algoPop" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
 		<div data-role="header" data-theme="a">
-			<h1>Avancement</h1>
+			<h1>Introduction</h1>
 		</div>
 		<div data-role="main" class="ui-content">
 			<h3 class="ui-title">Etes vous sur de vouloir jouer ce parcours?</h3>
-			<p>Description du parcours. Lorem ipsum. Niveau de difficulte.</p>
+			<p>Description du parcours. Lorem ipsum dolor sit amet, in ultricies tristique ultrices amet, dolor ornare cras in, ad faucibus eget. Amet posuere est blandit erat adipiscing dignissim, lacinia doloribus non integer fusce mi amet, praesent congue vivamus nunc nullam,. Niveau de difficulte facile.</p>
 			<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">Annuler</a>
 			<a href="#algo" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow">Aller</a>
 		</div>
@@ -71,7 +108,7 @@
 <div data-role="page" id="options">
 	<div data-role="header">
 		<h1>Options</h1>
-		<a data-rel="back" data-direction="reverse" href="#" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
+		<a data-rel="back" data-direction="reverse" href="#main" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
 	</div>
 
 	<div data-role="ui-content">
@@ -123,58 +160,42 @@
 <div data-role="page" id="algo">
 	<div data-role="header">
 		<h1>Parcours</h1>
-		<a data-rel="back" data-direction="reverse" href="#" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
+		<a data-rel="back" data-direction="reverse" href="#main" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
 		<a href="#animation" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-video">Jouer</a>
 	</div>
 
 	<div data-role="ui-content">
-		<h2 class="center">Avancement</h2>
+		<h2 class="center">Introduction</h2>
 		<div class="ui-field-contain">
 			<label for="select-native-5">Operations</label>
-			<select name="select-native-5" id="select-native-5" data-mini="true">
-				<option value="small">One</option>
-				<option value="medium">Two</option>
-				<option value="large">Three</option>
+			<select name="operations" id="operations" data-mini="true">
 			</select>
 		</div>
 		<div class="edit">
-			<textarea class="fixed-text" rows="7"></textarea>
+			<label id="operationLabel">Nombre de cases</label>
+			<input id="operationValue"/>
+			<button id="addButton" class="center">+</button>
 		</div>
 		<div class="steps">
-			<ol data-role="listview" data-split-icon="delete" data-split-theme="a" data-inset="true">
-				<li>
+			<ol id="steps" data-role="listview" data-split-icon="delete" data-split-theme="a" data-inset="true">
+								<li>
 					<a href="#">avance 3 cases</a>
 					<a href="#"></a>
 				</li>
-				<li>
-					<a href="#">tourne 90 degres</a>
-					<a href="#"></a>
-				</li>
-				<li>
-					<a href="#">avance 2 cases</a>
-					<a href="#"></a>
-				</li>
-				<li>
-					<a href="#">tourne 90 degres</a>
-					<a href="#"></a>
-				</li>
-				<li>
-					<a href="#">avance 3 cases</a>
-					<a href="#"></a>
-				</li>
+
 			</ol>
 		</div>
 	</div>
 	<div data-role="footer">
 		<div class="ui-grid-b">
 			<div class="ui-block-a">
-				<a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-arrow-l">Precedent</a>
+				<a href="#algo" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-arrow-l">Precedent</a>
 			</div>
 			<div class="ui-block-b">
 				<p class="center">Epreuves</p>
 			</div>
 			<div class="ui-block-c">
-				<a href="#options" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-arrow-r">Suivant</a>
+				<a href="#algo" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-arrow-r">Suivant</a>
 			</div>
 		</div>
 	</div>
@@ -184,11 +205,55 @@
 <div data-role="page" id="animation">
 	<div data-role="header">
 		<h1>Animation</h1>
-		<a data-rel="back" data-direction="reverse" href="#" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
+		<a data-rel="back" data-direction="reverse" href="#main" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
+		<a href="#algo" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-video">Algo</a>
 	</div>
 
 	<div data-role="ui-content">
-		
+		<table class="board center">
+			<tr>
+				<td><img id="r1c1" src=""/></td>
+				<td><img id="r1c2" src=""/></td>
+				<td><img id="r1c3" src=""/></td>
+				<td><img id="r1c4" src=""/></td>
+			</tr>
+			<tr>
+				<td><img id="r2c1" src=""/></td>
+				<td><img id="r2c2" src=""/></td>
+				<td><img id="r2c3" src=""/></td>
+				<td><img id="r2c4" src=""/></td>
+			</tr>
+			<tr>
+				<td><img id="r3c1" src=""/></td>
+				<td><img id="r3c2" src=""/></td>
+				<td><img id="r3c3" src=""/></td>
+				<td><img id="r3c4" src=""/></td>
+			</tr>
+			<tr>
+				<td><img id="r4c1" src=""/></td>
+				<td><img id="r4c2" src=""/></td>
+				<td><img id="r4c3" src=""/></td>
+				<td><img id="r4c4" src=""/></td>
+			</tr>
+		</table>
+
+		<div class="center">
+			<div id="playButton" class="round-button">Play</div>
+		</div>
+	</div>
+
+	<div data-role="footer">
+		<div class="ui-grid-b">
+			<div class="ui-block-a">
+				<a href="#algo" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-arrow-l">Precedent</a>
+			</div>
+			<div class="ui-block-b">
+				<p class="center">Epreuves</p>
+			</div>
+			<div class="ui-block-c">
+				<a href="#algo" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-arrow-r">Suivant</a>
+			</div>
+		</div>
 	</div>
 </div>
 </body>
