Adds remove all button

--- a/index.html
+++ b/index.html
@@ -167,20 +167,24 @@
 	<div data-role="ui-content">
 		<h2 class="center">Introduction</h2>
 		<div class="ui-field-contain">
-			<label for="select-native-5">Operations</label>
+			<label class="center" for="select-native-5">Operations</label>
 			<select name="operations" id="operations" data-mini="true">
 			</select>
 		</div>
 		<div class="edit">
-			<label id="operationLabel">Nombre de cases</label>
+			<br />
+			<label id="operationLabel" class="center">Nombre de cases</label>
 			<input id="operationValue"/>
+			<br />
 			<button id="addButton" class="center">+</button>
+			<button id="delAllBtn" class="center">Recommencer</button>
 		</div>
 		<div class="steps">
 			<ol id="steps" data-role="listview" data-split-icon="delete" data-split-theme="a" data-inset="true">
 			</ol>
 		</div>
 	</div>
+	<!--
 	<div data-role="footer">
 		<div class="ui-grid-b">
 			<div class="ui-block-a">
@@ -194,6 +198,7 @@
 			</div>
 		</div>
 	</div>
+	-->
 </div>
 
 <!-- ANIMATION PAGE -->
@@ -241,7 +246,7 @@
 			</div>
 		</div>
 	</div>
-
+	<!--
 	<div data-role="footer">
 		<div class="ui-grid-b">
 			<div class="ui-block-a">
@@ -255,6 +260,7 @@
 			</div>
 		</div>
 	</div>
+	-->
 </div>
 </body>
 </html>
