--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- HOME PAGE -->
 <div data-role="page" id="main">
-	<div data-role="header">
+	<div class="header" data-role="header">
 		<h1>Parcours</h1>
 		<a href="#" id="quit" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-power">Quitter</a>
 		<a href="#options" class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-gear">Options</a>
@@ -82,7 +82,7 @@
 			</div>
 		</div>
 		<div class="ui-grid-b">
-			<button width="50px" class="" disabled>...</button>
+			<button width="50px" class="" disabled style="font-size:20px; font-weight: bold;">...</button>
 		</div>
 	</div>
 	<!--
@@ -93,11 +93,13 @@
 
 	<div data-role="popup" id="algoPop" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
 		<div data-role="header" data-theme="a">
-			<h1>Introduction</h1>
+			<h1>Bouger</h1>
 		</div>
 		<div data-role="main" class="ui-content">
 			<h3 class="ui-title">Etes vous sur de vouloir jouer ce parcours?</h3>
-			<p>Description du parcours. Lorem ipsum dolor sit amet, in ultricies tristique ultrices amet, dolor ornare cras in, ad faucibus eget. Amet posuere est blandit erat adipiscing dignissim, lacinia doloribus non integer fusce mi amet, praesent congue vivamus nunc nullam,. Niveau de difficulte facile.</p>
+			<p style="text-align: justify;">L'objectif de ce parcours est de faire bouger votre avatar vers 
+			le point de rencontre, un gros carre vert. Pour y parvenir, vous avez
+			a votre disposition les operations "Avancer" et "Tourner".</p>
 			<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">Annuler</a>
 			<a href="#algo" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow">Aller</a>
 		</div>
@@ -106,16 +108,18 @@
 
 <!-- OPTIONS -->
 <div data-role="page" id="options">
-	<div data-role="header">
+	<div class="header" data-role="header">
 		<h1>Options</h1>
 		<a data-rel="back" data-direction="reverse" href="#main" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
 	</div>
 
 	<div data-role="ui-content">
+		<br />
+		<br />
 		<div class="ui-grid-b">
 			<div class="ui-block-a">
-				<div class="ui-bar ui-bar-a noStyle" style="height:120px">
-				<a href="#" id="avat-left"class="ui-btn ui-btn-right ui-icon-arrow-l ui-btn-icon-notext">Icon only</a>
+				<div class="ui-bar ui-bar-a noStyle" style="height:135px">
+				<a href="#" id="avat-left"class="big ui-btn ui-btn-right ui-icon-arrow-l ui-btn-icon-notext">Icon only</a>
 				</div>
 			</div>
 			<div class="ui-block-b">
@@ -125,15 +129,17 @@
 				</div>
 			</div>
 			<div class="ui-block-c">
-				<div class="ui-bar ui-bar-a noStyle" style="height:120px">
-					<a href="#" id="avat-right" class="ui-btn ui-btn-left ui-icon-arrow-r ui-btn-icon-notext">Icon only</a>
+				<div class="ui-bar ui-bar-a noStyle" style="height:135px">
+					<a href="#" id="avat-right" class="big ui-btn ui-btn-left ui-icon-arrow-r ui-btn-icon-notext">Icon only</a>
 				</div>
 			</div>
 		</div>
+		<br />
+		<br />
 		<div class="ui-grid-b">
 			<div class="ui-block-a">
-				<div class="ui-bar ui-bar-a noStyle" style="height:120px">
-					<a href="#" id="decor-left" class="ui-btn ui-btn-right ui-icon-arrow-l ui-btn-icon-notext">Icon only</a>
+				<div class="ui-bar ui-bar-a noStyle" style="height:135px">
+					<a href="#" id="decor-left" class="big ui-btn ui-btn-right ui-icon-arrow-l ui-btn-icon-notext">Icon only</a>
 				</div>
 			</div>
 			<div class="ui-block-b">
@@ -143,8 +149,8 @@
 				</div>
 			</div>
 			<div class="ui-block-c">
-				<div class="ui-bar ui-bar-a noStyle" style="height:120px">
-					<a href="#" id="decor-right" class="ui-btn ui-btn-left ui-icon-arrow-r ui-btn-icon-notext">Icon only</a>
+				<div class="ui-bar ui-bar-a noStyle" style="height:135px">
+					<a href="#" id="decor-right" class="big ui-btn ui-btn-left ui-icon-arrow-r ui-btn-icon-notext">Icon only</a>
 				</div>
 			</div>
 		</div>
@@ -158,7 +164,7 @@
 
 <!-- ALGORITHM PAGE -->
 <div data-role="page" id="algo">
-	<div data-role="header">
+	<div class="header" data-role="header">
 		<h1>Parcours</h1>
 		<a href="#main" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
 		<a href="#animation" class="js-anim ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-video">Jouer</a>
@@ -176,7 +182,7 @@
 			<label id="operationLabel" class="center">Nombre de cases</label>
 			<input id="operationValue"/>
 			<br />
-			<button id="addButton" class="center">+</button>
+			<button id="addButton" class="center">Ajouter</button>
 			<button id="delAllBtn" class="center">Recommencer</button>
 		</div>
 		<div class="steps">
@@ -203,7 +209,7 @@
 
 <!-- ANIMATION PAGE -->
 <div data-role="page" id="animation">
-	<div data-role="header">
+	<div class="header" data-role="header">
 		<h1>Animation</h1>
 		<a data-rel="back" href="#algo" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-back">Retour</a>
 	</div>
@@ -240,7 +246,8 @@
 						</tr>
 					</table>
 					<div>
-						<div id="playButton" class="center round-button">Play</div>
+						<br />
+						<div id="playButton" class="center round-button">Go</div>
 					</div>
 				</div>
 			</div>
