Changes for demo

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="ui-grid-b">
-			<button width="50px" class="" disabled style="font-size:20px; font-weight: bold;">...</button>
+		<div id="more" class="ui-grid-b">
+			<button width="50px" class="more" style="font-size:20px; font-weight: bold;">...</button>
 		</div>
 	</div>
 	<!--
